<resources>
    <string name="app_name">Agenda de tareas</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="nombre_usuario">Nombre</string>
    <string name="pass_login">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="usuario_nuevo">No estas registrado?</string>
    <string name="crear_cuenta_txt">Crear usuario</string>
    <string name="nombre_et">Nombre</string>
    <string name="contrasena_et">Contraseña</string>
    <string name="confirmar_contrasena_et">Confirmar contraseña</string>
    <string name="registrar_usuario">Registrarse</string>
    <string name="tengo_una_cuenta">Tengo una cuenta</string>
    <string name="fecha_registro_txt">Fecha de registro</string>
    <string name="fecha_actual">Fecha actual</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="btn_calendario">Fecha de entrega</string>
    <string name="fecha_entrega">00/00/0000</string>
    <string name="agregar_tarea">Agregar tarea</string>
    <string name="btn_guardar_tarea">Guardar tarea</string>
    <string name="titulo_item">Titulo</string>
    <string name="descripcion_item">Descripcion</string>
    <string name="fecha_item">Fecha de entrega</string>
    <string name="fecha_registro_item">Fecha de registro</string>
    <string name="listar_tareas">Mis tareas</string>
    <string name="elija_opcion">Que acción quiere realizar</string>
    <string name="eliminar_tarea">Desea eliminar esta tarea?</string>
    <string name="btn_eliminar_tarea">Eliminar</string>
    <string name="btn_compartir_tarea">Compartir</string>
    <string name="opciones_tarea">Seleccione una acción</string>
    <string name="editar_imagen_perfil">Editar foto</string>
    <string name="no_elementos">No tienes tareas! Prueba agregando una</string>
    <string name="btn_horario">Hora de entrega</string>
    <string name="horario_entrega">00:00</string>
    <string name="descripcion_tarea">Descripción</string>
    <string name="btn_cerrar">Cerrar</string>
</resources>