<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarTarea.AgregarTarea">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!--Icono+textview-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icono_fecha_registro"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_registro_txt"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/fecha_actual"
            android:hint="@string/fecha_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"
            android:id="@+id/titulo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:id="@+id/descripcion"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_calendario"
                android:id="@+id/btn_calendario"
                app:icon="@drawable/icono_calendario"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_entrega"
                android:id="@+id/fecha_entrega"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_horario"
                android:id="@+id/btn_horario"
                app:icon="@drawable/icono_horario"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/horario_entrega"
                android:id="@+id/horario_entrega"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <Button
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar_tarea"
            android:id="@+id/btn_guardar_tarea"
            app:icon="@drawable/icono_guardar" />
    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>