<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <!--Icono-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/icono_item_tarea"
                android:src="@drawable/icono_item_tarea"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="7dp">

            <TextView
                android:layout_marginEnd="100dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_item"
                android:id="@+id/titulo_tarea"/>
            <TextView
                android:justificationMode="inter_word"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/descripcion_item"
                android:id="@+id/descripcion_tarea"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:fontFamily="@font/poppins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_registro_item"
                    android:id="@+id/fecha_registro_tarea"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icono_flecha_derecha"/>

                <TextView
                    android:fontFamily="@font/poppins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_item"
                    android:id="@+id/fecha_entrega_tarea"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>